added fleet microservice + api documentation
